[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://Carrot.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3000, 42 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )
Carrot = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 164.35, 388.669 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 100, 410 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Ground" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 360, 480 )
shape = SubResource( 1 )
[connection signal="facing_left" from="Player" to="." method="_on_Player_facing_left"]
[connection signal="facing_right" from="Player" to="." method="_on_Player_facing_right"]
[connection signal="fire_carrot" from="Player" to="." method="_on_Player_fire_carrot"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
